# sc_io_framework

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
app_sc_framework/: CMakeLists.txt  app_sc_framework.cmake  deps.cmake  dsp_design.ipynb  lib_xua.cmake  requirements.txt
app_sc_framework/.ipynb_checkpoints/: dsp_design-checkpoint.ipynb
app_sc_framework/src/: XCORE-AI-EXPLORER.xn  adc_task.c  adc_task.h  adc_task.xc  app_config.h  app_main.c  app_main.h  control_task.c  control_task.h  control_task.xc  dsp_wrapper.c  dsp_wrapper.h  gpio_control_task.c  gpio_control_task.h  gpio_control_task.xc  i2s_wrapper.c  i2s_wrapper.h  top_level.xc  user_main.h  xassert.h  xua_conf.h  xua_wrapper.c  xua_wrapper.h
app_sc_framework/src/audio_dsp/: app_dsp.c  app_dsp.h  dsp_device_control.h  dspt_control.c  dspt_control.h  dspt_main.h  dspt_usb.c  vendorrequests.c
app_sc_framework/src/audio_dsp/dsp_pipeline/: adsp_generated_auto.c  adsp_generated_auto.h
app_sc_framework/src/audio_dsp/dsp_pipeline/yaml/: 0.yaml  2.yaml  3.yaml  4.yaml  5.yaml
app_sc_framework/src/audio_dsp/src.autogen/common/: biquad_config.h  cascaded_biquads_config.h  cmds.h  compressor_rms_config.h  dsp_thread_config.h  envelope_detector_peak_config.h  envelope_detector_rms_config.h  fixed_gain_config.h  limiter_peak_config.h  limiter_rms_config.h  mixer_config.h  noise_gate_config.h  pipeline_config.h  switch_config.h  volume_control_config.h
app_sc_framework/src/audio_dsp/src.autogen/device/: cmd_offsets.h
app_sc_framework/src/dac_setup/: aic3204.xc  dac_port.xc
modules/: CMakeLists.txt
(+16 files in other folders)
